Javascript and 2nd modal page added

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     
     <button id="modalBtn" class="button">Click here</button>
 
-    <div id="sipleModal" class="modal">
+    <div id="simpleModal" class="modal">
         <div class="modal-content">
             <span class="closeBtn">&times;</span>
             <p>Hello..... I am a modal</p>
         </div>
     </div>
+    <a href="./ind2.html"><strong>Click to go to 2nd Modal page</strong></a>
 
     <script src="./js/main.js"></script>
 </body>
